Adding url to othermetrics graph

--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -161,6 +161,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     <hr style="height:2px; background-color:#878787;margin-top: 5px;margin-bottom: 5px;">
 </div>
 
+Metrics url: {{ metrics_url }}
 <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#tagModal">
         Launch demo modal
       </button>-->
