--- a/dashboards/templates/dashboards/subjects_other_indicators.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators.html
@@ -18,27 +18,108 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         padding: 0px;
         color: #000 !important;
     }
-    .card-tittle{
+
+    .card-tittle {
         margin-top: 5px;
     }
-    .card-text{
+
+    .card-text {
         margin-bottom: 2px;
+    }
+
+    .back-other-indicator {
+        stroke-width: 3px;
+        stroke: #009886;
+        fill: none;
+        width: 20%;
+        height: 100%;
+    }
+
+    .rect-other-indicator {
+        height: 100%;
+    }
+
+    .card-indicator {
+        display: flex;
+    }
+
+    .graph-indicator {
+        /*width:65%;*/
+        height: 25px;
+        margin-top: 5px;
+        flex-grow: 1;
     }
 </style>
 
-<div class="col-md-4 col-xs-10 col-sm-6 col-lg-4">
+<div class="col-md-4 col-xs-12 col-sm-8 col-lg-4">
     <div style="font-size:16px; text-align:left; color: #000; padding-left: 10px; ">
         <b>{% trans 'Other indicators' %}</b>
     </div>
     <hr style="height:2px; background-color:#878787;margin-top: 5px;margin-bottom: 5px;">
 
+    <!--Metrics url: {{ metrics_url }}-->
+
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
-        <div class="panel-group" id="indicators-accordion" aria-multiselectable="false">
+        <div id="indicators-accordion" class="panel-group"  aria-multiselectable="false" style="display: none;opacity: 0">
             {% include 'dashboards/subjects_other_indicators_card.html' with tittle="access_enviromment" %}
             {% include 'dashboards/subjects_other_indicators_card.html' with tittle="distincts_days" %}
             {% include 'dashboards/subjects_other_indicators_card.html' with tittle="access_resource" %}
             {% include 'dashboards/subjects_other_indicators_card.html' with tittle="distincts_resource" %}
             {% include 'dashboards/subjects_other_indicators_card.html' with tittle="tasks_on_time" %}
         </div>
+        
+        {% include 'dashboards/loading_ball.html' with tittle="indicators_loading_ball" %}
     </div>
 </div>
+<script>
+    $.get("{{ metrics_url }}", function (data) {
+        d3.select("#indicators_loading_ball").transition().duration(300).style("opacity", "0");
+        d3.select("#indicators_loading_ball").transition().delay(300).remove();
+
+        var indicators_container = d3.select("#indicators-accordion").transition().delay(300).style("display", "inherit");
+        indicators_container.transition().delay(400).duration(400).style("opacity", 1);
+
+        var indicators = d3.selectAll(".indicator-panel").data(data);
+
+        indicators.selectAll(".rect-other-indicator").data(function (d, i) { return range(5).map(function () { return d; }) })
+            //.transition().delay(function(d,i){return i*500}).duration(500)
+            .attr("width", function (d, i) {
+                var my_local = d.my_access - d.max_access * i / 5,
+                    max_local = d.max_access / 5;
+
+                if (my_local < max_local / 4 || my_local <= 0)
+                    return "0%";
+                else if (my_local < max_local * 3 / 4)
+                    return "10%"
+                else
+                    return "20%";
+            })
+
+        indicators.select(".you-result").text(function (d) {
+            return "{% trans 'Your result:'%} " + d.my_access;
+        })
+
+        indicators.select(".max-result").text(function (d) {
+            return "{% trans 'Top of the class:'%} " + d.max_access;
+        })
+
+        indicators.select(".golden_star")
+            //.transition().delay(2500).duration(100)
+            .attr("opacity", function (d) {
+                if (d.my_access >= d.max_access && d.my_access>0)//==
+                    return 1;
+                else
+                    return 0;
+            });
+
+        indicators.select(".silver_star")
+            //.transition().delay(2500).duration(100)
+            .attr("opacity", function (d) {
+                if (d.my_access >= d.max_access * 3 / 4 && d.my_access < d.max_access && d.my_access>0)
+                    return 1;
+                else
+                    return 0;
+            });
+
+    });
+</script>
